bin/tests/snapshots/empty_list_concat__df1c6ef98c749f5c410a485b3d0d5d68_lint_json.snap
---
source: bin/tests/empty_list_concat.rs
---
[] ++ []
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "empty_list_concat",
      "note": "Unnecessary concatenation with empty list",
      "code": 23,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 1
            },
            "to": {
              "line": 1,
              "column": 9
            }
          },
          "message": "Concatenation with the empty list, `[]`, is a no-op",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 1,
                "column": 9
              }
            },
            "fix": "[]"
          },
          "fixable": true
        }
      ]
    }
  ]
}
