bin/tests/snapshots/empty_list_concat__df1c6ef98c749f5c410a485b3d0d5d68_lint_stderr.snap
---
source: bin/tests/empty_list_concat.rs
---
[] ++ []
---
[empty_list_concat] Warning: Unnecessary concatenation with empty list
   ╭─[ <temp_file_path>:1:1 ]
   │
 1 │ [] ++ []
   │ ────┬───  
   │     ╰───── Concatenation with the empty list, [], is a no-op
───╯
