bin/tests/snapshots/empty_list_concat__fix_101b0ae94152b04237b8c545fe97cda0c36d044cf90e2048babdd9e9c99633f3.snap
---
source: bin/tests/empty_list_concat.rs
---
[] ++ []

---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-[] ++ []
+[]
