bin/tests/snapshots/empty_list_concat__fix_135412f63924b7254f942ad4d2de3493b11c863535cf22e9f70eee53e68c20ee.snap
---
source: bin/tests/empty_list_concat.rs
---
[1 2 3] ++ []

---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-[1 2 3] ++ []
+[1 2 3]
