bin/tests/snapshots/empty_list_concat__fix_6fbfc18e453d85b4dc4baca074233158ce77af6b410f1b9c7491f41da8cd2a4c.snap
---
source: bin/tests/empty_list_concat.rs
---
[] ++ [] ++ []

---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-[] ++ [] ++ []
+[]
