bin/tests/snapshots/empty_list_concat__fix_b21d85ebdd134bcebe66a106e06b919bbaa8fccdbac4f5c9af1189831c5c7f4c.snap
---
source: bin/tests/empty_list_concat.rs
---
[] ++ [1 2 3]

---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-[] ++ [1 2 3]
+[1 2 3]
