bin/tests/snapshots/empty_list_concat__lint_101b0ae94152b04237b8c545fe97cda0c36d044cf90e2048babdd9e9c99633f3.snap
---
source: bin/tests/empty_list_concat.rs
---
[] ++ []

---
[W23] Warning: Unnecessary concatenation with empty list
   ╭─[<temp_file_path>:1:1]
   │
 1 │ [] ++ []
   · ────┬───  
   ·     ╰───── Concatenation with the empty list, [], is a no-op
───╯
